--- a/14-kubernetes/6_volumes/nginx.config
+++ b/14-kubernetes/6_volumes/nginx.config
@@ -17,7 +17,7 @@ http {
         listen 8080;
         
         location / {
-            proxy_pass         http://static;
+            proxy_pass         http://svc-static:8080;
             proxy_redirect     off;
         }
     }
@@ -26,7 +26,7 @@ http {
         listen 8081;
         
         location / {
-            proxy_pass         http://dynamic;
+            proxy_pass         http://svc-dynamic:8080;
             proxy_redirect     off;
         }
     }
