--- a/14-kubernetes/5_ingress/ingress.yml
+++ b/14-kubernetes/5_ingress/ingress.yml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: sites.test.local
+  - host: sites.stg.local
     http:
       paths:
       - path: /svc1
