--- a/15-helm/charts/demo/templates/deployment.yaml
+++ b/15-helm/charts/demo/templates/deployment.yaml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
         - name: {{ .Values.container.name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion}}"
